# sentinel2-scraper

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.en.md  README.md  gdal.go
.claude/: settings.local.json
internal/bundle/: linux.go  stub.go
packaging/linux/: AppRun  build-appimage.sh  collect-deps.sh
